[package]
name = "aneri-rng-test"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MPL-2.0"
publish = false
repository = "https://github.com/Absolucy/aneri"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = { git = "https://github.com/spacestation13/byondapi-rs" }
eyre = "0.6"
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
rand-wyrand = "0.1"
slotmap = "1"
rand_blake3 = "1"
